# ass_msgs

./: CMakeLists.txt  master_bridge_mapping_rule.yaml  package.xml
action/: RequestExecution.action
msg/: ARMstrongTrajectory.msg  ARMstrongTrajectoryExecution.msg  ARMstrongTrajectoryFeedback.msg  ArmMasterCommInt.msg  DXLCommand.msg  Hold.msg  ManualVolt.msg  PoseIteration.msg  Preset.msg  Robot2UI.msg  TrajectoryFeedback.msg  TrajectoryPoint.msg  UI2Robot.msg  UIAction.msg
srv/: RequestPlan.srv
